[Presentation API] Change PresentationConnection's default binaryType to ArrayBuffer

To fix http://web-platform.test:8001/presentation-api/controlling-ua/PresentationConnection_onmessage-manual.html:77:17

BUG=705170

Review-Url: https://codereview.chromium.org/2777403002
Cr-Commit-Position: refs/heads/master@{#460136}